Fix theme button layout on mobile

--- a/src/styles/theme-button.scss
+++ b/src/styles/theme-button.scss
@@ -17,6 +17,7 @@
         border-radius: 50%;
         height: 22px;
         width: 22px;
+        font-size: 0px;
         transition: border 0.25s linear;
         position: relative;
 
